--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,7 +13,9 @@
     "./utils/variants/*": "./utils/variants/*.ts",
     "./utils/*": "./utils/*",
     "./config/astro": "./config/astro.base.config.mjs",
-    "./config/typescript": "./config/tsconfig.base.json"
+    "./config/typescript": "./config/tsconfig.base.json",
+    "./config/postcss": "./config/postcss.config.js",
+    "./utils/obfuscationIntegration.js": "./utils/obfuscationIntegration.js"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.0",
